--- a/CSS/index.css
+++ b/CSS/index.css
@@ -765,16 +765,16 @@ body {
     background:url(../Assets/speak1.jpeg);
   }
   #speak2{
-    background:url(../Assets/speak2.png);
+    background:url(../Assets/speak11.jpeg);
   }
   #speak3{
     background:url(../Assets/speak3.jpeg);
   }
   #speak4{
-    background:url(../Assets/speak4.jpeg);
+    background:url(../Assets/speak10.jpg);
   }
   #speak5{
-    background:url(../Assets/speak5.jpeg);
+    background:url(../Assets/speak6.jpeg);
   }
   .back-face{
     height: 100%;
@@ -856,12 +856,12 @@ body {
     text-align: center;
   }
   ::-webkit-scrollbar {
-    width: 30px;
+    width: 20px;
   }
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: #3C2AC9; 
+    background-color: #3C2AC9; 
   }
    
   /* Handle */
