--- a/CSS/index.css
+++ b/CSS/index.css
@@ -388,7 +388,7 @@ body {
     /* wih:700px; */
     padding: 10px;
 }
-.handles > .row > .col > a{
+.handles > .row > .col > nobr >a{
     text-decoration: none;
     color: #FEA1BE;
     font-size: 16px;
